2008-09-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* ssp/ssp.c, misc/dma.c, include/dma.h, include/ssp.h: New files.

	* Makefile.am, preinstall.am, README: Update.

	* include/irq.h: Fixed typos.

	* include/lpc24xx.h: New defines and types.  Converted to UNIX line
	endings.

	* misc/system-clocks.c, startup/bspstart.c: Update for utility.h
	changes.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/clock-config.c: include "../../../shared/clockdrv_shell.h".
	* Makefile.am: Reflect changes above.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* preinstall.am: Regenerated.

2008-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminates libcpudir.

2008-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove NETWORKING (Sources are missing).

2008-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Add DISTCLEANFILES = include/bspopts.h.

2008-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Add bsp_specs.

2008-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1322/bsps
	* include/bspopts.h.in: Remove.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, include/bspopts.h.in: Make letting boot_card() handle
	work area allocation mandatory. Rename
	RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to BSP_BOOTCARD_OPTIONS.

2008-09-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* README: Add URL.
